testsuite/tests/typecheck/should_fail/T13292.hs
module Main where

import T13292a

-- main :: IO ()
main = someFunc
